shop/deploy/base/identity-profile/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: identity-profile
  labels:
    app: identity-profile
    shop.io/cell: id
spec:
  selector:
    app: identity-profile
  ports:
    - name: http
      port: 8113
      targetPort: 8113
